--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.dromara.dynamictp</groupId>
-        <artifactId>dynamic-tp-dependencies</artifactId>
+        <artifactId>dynamic-tp-all</artifactId>
+        <relativePath>../pom.xml</relativePath>
         <version>${revision}</version>
-        <relativePath>../dependencies/pom.xml</relativePath>
     </parent>
     <artifactId>dynamic-tp-common</artifactId>
 
@@ -14,7 +14,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
