--- a/example/example-apollo/pom.xml
+++ b/example/example-apollo/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.ctrip.framework.apollo</groupId>
             <artifactId>apollo-client</artifactId>
-            <version>1.9.1</version>
+<!--            <version>1.9.1</version>-->
         </dependency>
     </dependencies>
 </project>
