--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.dromara.dynamictp</groupId>
-        <artifactId>dynamic-tp-dependencies</artifactId>
+        <artifactId>dynamic-tp-all</artifactId>
+        <relativePath>../pom.xml</relativePath>
         <version>${revision}</version>
-        <relativePath>../dependencies/pom.xml</relativePath>
     </parent>
     <artifactId>dynamic-tp-test</artifactId>
     <packaging>pom</packaging>
