--- a/starter/starter-extension/starter-extension-notify-email/pom.xml
+++ b/starter/starter-extension/starter-extension-notify-email/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>dynamic-tp-starter-extension</artifactId>
         <groupId>org.dromara.dynamictp</groupId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
