--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>dynamic-tp-example</artifactId>
         <groupId>org.dromara.dynamictp</groupId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>dynamic-tp-example-adapter</artifactId>
     <packaging>pom</packaging>
