--- a/example/example-huawei-cloud/pom.xml
+++ b/example/example-huawei-cloud/pom.xml
@@ -7,6 +7,7 @@
         <groupId>org.dromara.dynamictp</groupId>
         <artifactId>dynamic-tp-example</artifactId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>dynamic-tp-example-huawei-cloud</artifactId>
