--- a/extension/extension-limiter-redis/pom.xml
+++ b/extension/extension-limiter-redis/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.dromara.dynamictp</groupId>
         <artifactId>dynamic-tp-extension</artifactId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>dynamic-tp-extension-limiter-redis</artifactId>
 
