--- a/starter/starter-adapter/starter-adapter-brpc/pom.xml
+++ b/starter/starter-adapter/starter-adapter-brpc/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.dromara.dynamictp</groupId>
         <artifactId>dynamic-tp-starter-adapter</artifactId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>dynamic-tp-spring-boot-starter-adapter-brpc</artifactId>
 
