--- a/starter/starter-extension/starter-extension-limiter-redis/pom.xml
+++ b/starter/starter-extension/starter-extension-limiter-redis/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.dromara.dynamictp</groupId>
         <artifactId>dynamic-tp-starter-extension</artifactId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>dynamic-tp-spring-boot-starter-extension-limiter-redis</artifactId>
 
