--- a/starter/starter-configcenter/starter-zookeeper/pom.xml
+++ b/starter/starter-configcenter/starter-zookeeper/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <scope>compile</scope>
+            <optional>true</optional>
             <exclusions>
                 <exclusion>
                     <artifactId>slf4j-log4j12</artifactId>
