--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -5,12 +5,10 @@
     <groupId>org.dromara.dynamictp</groupId>
     <artifactId>dynamic-tp-dependencies</artifactId>
     <version>${revision}</version>
-    <name>dependencies</name>
     <packaging>pom</packaging>
 
     <properties>
-        <revision>1.1.2.1-SNAPSHOT</revision>
-        <commons-collections4.version>4.4</commons-collections4.version>
+        <revision>1.1.3</revision>
         <hutool.version>5.8.12</hutool.version>
         <lombok.version>1.18.24</lombok.version>
         <apollo.version>1.5.0</apollo.version>
@@ -68,21 +66,17 @@
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>${apache-dubbo.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>com.alibaba.spring.boot</groupId>
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>${alibaba-dubbo.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>net.devh</groupId>
                 <artifactId>grpc-server-spring-boot-starter</artifactId>
                 <version>${grpc.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-collections4</artifactId>
-                <version>${commons-collections4.version}</version>
             </dependency>
 
             <dependency>
