--- a/starter/starter-spring-boot-adapter-3.x/pom.xml
+++ b/starter/starter-spring-boot-adapter-3.x/pom.xml
@@ -2,11 +2,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cn.dynamictp</groupId>
+        <groupId>org.dromara.dynamictp</groupId>
         <artifactId>dynamic-tp-starter</artifactId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>starter-spring-boot-adapter-3.x</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>starter-extension-notify-email-3.x</module>
+    </modules>
 
     <properties>
         <spring-boot.version>3.0.5</spring-boot.version>
