--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -366,6 +366,12 @@
 
             <dependency>
                 <groupId>org.dromara.dynamictp</groupId>
+                <artifactId>dynamic-tp-extension-notify-email-3.x</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.dromara.dynamictp</groupId>
                 <artifactId>dynamic-tp-extension-skywalking</artifactId>
                 <version>${revision}</version>
             </dependency>
