--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>extension</module>
         <module>test</module>
         <module>dependencies</module>
+        <module>extension/extension-3.x</module>
     </modules>
 
     <dependencies>
