--- a/extension/extension-3.x/extension-notify-email-3.x/pom.xml
+++ b/extension/extension-3.x/extension-notify-email-3.x/pom.xml
@@ -4,25 +4,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.dromara.dynamictp</groupId>
-        <artifactId>dynamic-tp-all</artifactId>
+        <artifactId>dynamic-tp-extension-3.x</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>dynamic-tp-extension</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>extension-3.x</module>
-        <module>extension-skywalking</module>
-        <module>extension-limiter-redis</module>
-        <module>extension-notify-email</module>
-        <module>extension-opentelemetry</module>
-    </modules>
+    <artifactId>dynamic-tp-extension-notify-email-3.x</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.dromara.dynamictp</groupId>
-            <artifactId>dynamic-tp-core</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
+
 </project>
