--- a/starter/starter-spring-boot-adapter-3.x/starter-extension-notify-email-3.x/pom.xml
+++ b/starter/starter-spring-boot-adapter-3.x/starter-extension-notify-email-3.x/pom.xml
@@ -12,13 +12,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-extension-notify-email-3.x</artifactId>
+            <version>1.1.3</version>
         </dependency>
     </dependencies>
 
