fix zk example start failed

--- a/example/example-zookeeper/pom.xml
+++ b/example/example-zookeeper/pom.xml
@@ -29,5 +29,9 @@
             <artifactId>dynamic-tp-spring-boot-starter-zookeeper</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+        </dependency>
     </dependencies>
 </project>
