--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -372,6 +372,12 @@
 
             <dependency>
                 <groupId>org.dromara.dynamictp</groupId>
+                <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.dromara.dynamictp</groupId>
                 <artifactId>dynamic-tp-spring-boot-starter-adapter-common</artifactId>
                 <version>${revision}</version>
             </dependency>
