--- a/extension/extension-skywalking/pom.xml
+++ b/extension/extension-skywalking/pom.xml
@@ -16,6 +16,11 @@
             <groupId>org.apache.skywalking</groupId>
             <artifactId>apm-toolkit-trace</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
