--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -15,6 +15,7 @@
         <module>starter-configcenter</module>
         <module>starter-adapter</module>
         <module>starter-extension</module>
+        <module>starter-common</module>
     </modules>
 
     <dependencies>
@@ -26,6 +27,11 @@
         <dependency>
             <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
