--- a/example/example-nacos/pom.xml
+++ b/example/example-nacos/pom.xml
@@ -56,6 +56,17 @@
             <artifactId>dynamic-tp-spring-boot-starter-nacos</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-extension-limiter-redis</artifactId>
+            <version>${revision}</version>
+        </dependency>
     </dependencies>
 
 </project>
